# sirhurt-py

./: README.md  build.py
src/injector/: Cargo.toml
src/injector/src/: main.rs
src/sirhurt-api/: .gitignore  README.md  pyproject.toml
src/sirhurt-api/sirhurt/: __init__.py  __main__.py  cli.py  client.py  constants.py  exceptions.py  exploit.py  helpers.py  roblox.py  windows.py  wine.py
