[package]
name = "injector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.10", features = ["derive"] }
dll-syringe = { version = "0.15.0", features = ["into-x86-from-x64", "syringe"] }

[profile.release]
lto = true
