[tool.poetry]
name = "sirhurt-api"
version = "0.1.0"
description = "Unofficial API for SirHurt"
authors = ["tretrauit <tretrauit@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "sirhurt" }
]
include = ["sirhurt/bin/*"]

[tool.poetry.dependencies]
python = "^3.10"
appdirs = "^1.4.4"
requests = "^2.28.2"
psutil = "^5.9.4"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
